tests/jsx_pragma_option/index.js
//@flow

import { bar } from './jsx'


// ok
const Hello = <hello a="nice" />;

// error
const Bye = <a />;
